--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:aicomfly": "node scripts/test-aicomfly.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
