feat: Migrate background tasks from Netlify to Supabase

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/axios": "^0.9.36",
     "@vercel/functions": "^2.2.2",
     "autoprefixer": "^10.4.20",
